tests/type-errors/move-semantics/adopt_const_place.cx
struct Resource : @nodrop {
    int data;
};

int main() {
    Resource* ptr = malloc(sizeof(Resource));
    const Resource& source = *ptr;
    Resource adopted = @unsafe(@adopt(source));
    adopted.drop();
    free(ptr);
    return 0;
}

void Resource::drop(this) {
    @leak(this);
}

#include <stdlib.h>
